--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus das Sombras</title>
+    <title>Nexus das Sombras - Instruções</title>
+    <link rel="stylesheet" href="style.css"> <!-- Caminho para o style.css -->
 </head>
 <body>
-    
+    <div class="container">
+        <div class="caixa-texto" id="caixa-texto">
+            <p id="instrucoes">Clique em "Avançar" para ler as instruções.</p>
+            <button id="btn-avancar">Avançar</button>
+        </div>
+    </div>
+
+    <!-- Caminho correto para o script.js -->
+    <script src="../BackEnd/script.js"></script> <!-- Corrigido para o caminho correto -->
 </body>
 </html>
