--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div class="container">
+         <!-- Logo acima da caixa de texto -->
+        <img src="../img/nexus_logo.jpg" alt="Logo Nexus das Sombras" class="logo">
+
         <div class="caixa-texto" id="caixa-texto">
-            <p id="instrucoes">Clique em "Avançar" para ler as instruções.</p>
+            <p id="instrucoes">Olá, jogador! <br> Bem vindo ao Nexus das Sombras, clique em avançar para iniciar sua jornada no caminho sombrio...</p>
             <button id="btn-avancar">Avançar</button>
         </div>
     </div>
