--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nexus das Sombras - Instruções</title>
     <link rel="stylesheet" href="style.css"> <!-- Caminho para o style.css -->
 </head>
+
 <body>
     <div class="container">
-         <!-- Logo acima da caixa de texto -->
+        <!-- Logo acima da caixa de texto -->
         <img src="../img/nexus_logo.jpg" alt="Logo Nexus das Sombras" class="logo">
 
         <div class="caixa-texto" id="caixa-texto">
-            <p id="instrucoes">Olá, jogador! <br> Bem vindo ao Nexus das Sombras, clique em avançar para iniciar sua jornada no caminho sombrio...</p>
-            <button id="btn-avancar">Avançar</button>
+            <p id="instrucoes">"Olá, jogador! <br> Bem vindo ao Nexus das Sombras, clique em avançar para iniciar sua jornada no caminho sombrio...",</p>
+            <div class="botoes-container">
+                <button id="btn-voltar">Voltar</button>
+                <button id="btn-avancar">Avançar</button>
+            </div>
         </div>
     </div>
 
     <!-- Caminho correto para o script.js -->
     <script src="../BackEnd/script.js"></script> <!-- Corrigido para o caminho correto -->
 </body>
+
 </html>
