--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -14,12 +14,20 @@
         <img src="../img/nexus_logo.jpg" alt="Logo Nexus das Sombras" class="logo">
 
         <div class="caixa-texto" id="caixa-texto">
-            <p id="instrucoes">"Olá, jogador! <br> Bem vindo ao Nexus das Sombras, clique em avançar para iniciar sua jornada no caminho sombrio...",</p>
+            <p id="instrucoes">Olá, jogador!
+                <br>Bem-vindo ao <strong>Nexus das Sombras</strong>, onde cartas revelam segredos ancestrais e poderes
+                inimagináveis. Suas escolhas definirão o destino de reinos e criaturas lendárias.
+                <br>Clique em Avançar para iniciar sua jornada e desvendar os mistérios que aguardam!
+            </p>
             <div class="botoes-container">
                 <button id="btn-voltar">Voltar</button>
                 <button id="btn-avancar">Avançar</button>
             </div>
+        
         </div>
+
+                <!-- Referenciando o jogo.js como módulo -->
+                <script type="module" src="../BackEnd/jogo.js"></script>
     </div>
 
     <!-- Caminho correto para o script.js -->
