--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nexus das Sombras - Instruções</title>
     <link rel="stylesheet" href="style.css"> <!-- Caminho para o style.css -->
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@0;1&family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,7 +15,7 @@
         <img src="../img/nexus_logo.jpg" alt="Logo Nexus das Sombras" class="logo">
 
         <div class="caixa-texto" id="caixa-texto">
-            <p id="instrucoes">Olá, jogador!
+            <p id="instrucoes">Olá, jogadora!
                 <br>Bem-vindo ao <strong>Nexus das Sombras</strong>, onde cartas revelam segredos ancestrais e poderes
                 inimagináveis. Suas escolhas definirão o destino de reinos e criaturas lendárias.
                 <br>Clique em Avançar para iniciar sua jornada e desvendar os mistérios que aguardam!
@@ -30,6 +31,12 @@
                 <script type="module" src="../BackEnd/jogo.js"></script>
     </div>
 
+    <!--Musica-->
+    <audio id="musica-fundo" loop>
+        <source src="audio/audio_home.mp3" type="audio/mp3">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+    
     <!-- Caminho correto para o script.js -->
     <script src="../BackEnd/script.js"></script> <!-- Corrigido para o caminho correto -->
 </body>
