--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,7 +12,9 @@
 <body>
     <div class="container">
         <!-- Logo acima da caixa de texto -->
-        <img src="../img/nexus_logo.jpg" alt="Logo Nexus das Sombras" class="logo">
+        <!-- <img src="../img/nexus_logo.jpg" alt="Logo Nexus das Sombras" class="logo"> -->
+        <video id="videoLogo" width="350" height="350" src="../video/logo_motion2.mp4" autoplay loop muted>
+        </video>
 
         <div class="caixa-texto" id="caixa-texto">
             <p id="instrucoes">Olá, jogadora!
